--- a/fichatecnica.html
+++ b/fichatecnica.html
@@ -18,10 +18,8 @@
 }
 *{box-sizing:border-box}
 body{
-  margin:0;
-  background:var(--bg);
-  font-family:Inter,sans-serif;
-  color:var(--text);
+  margin:0;background:var(--bg);
+  font-family:Inter,sans-serif;color:var(--text);
 }
 .hidden{display:none}
 
@@ -43,10 +41,8 @@ body{
   border-radius:24px;z-index:10;
 }
 .spinner{
-  width:26px;height:26px;
-  border:4px solid #cbd5e1;
-  border-top-color:var(--primary);
-  border-radius:50%;
+  width:26px;height:26px;border:4px solid #cbd5e1;
+  border-top-color:var(--primary);border-radius:50%;
   animation:spin .8s linear infinite;
 }
 @keyframes spin{to{transform:rotate(360deg)}}
@@ -64,10 +60,9 @@ button{
   color:#fff;font-weight:800;border:none;cursor:pointer;
 }
 
-/* LISTA */
+/* LISTAS */
 .lista .item{
-  background:#f1f5f9;
-  padding:14px;border-radius:14px;
+  background:#f1f5f9;padding:14px;border-radius:14px;
   margin-top:6px;cursor:pointer;font-weight:800;
 }
 .lista .item:hover{background:#e2e8f0}
@@ -79,32 +74,26 @@ button{
   gap:8px;
 }
 .ing{
-  background:#f8fafc;
-  padding:12px 16px;
-  border-radius:14px;
-  margin-top:6px;
-  display:flex;justify-content:space-between;
+  background:#f8fafc;padding:12px 16px;border-radius:14px;
+  margin-top:6px;display:flex;justify-content:space-between;
   font-weight:800;
 }
 
 /* KPIS */
 .kpis{
-  display:grid;
-  grid-template-columns:repeat(3,1fr);
+  display:grid;grid-template-columns:repeat(3,1fr);
   gap:14px;margin-top:26px;
 }
 .kpi{
-  background:#f8fafc;
-  padding:18px;border-radius:18px;
+  background:#f8fafc;padding:18px;border-radius:18px;
   text-align:center;font-weight:800;
 }
 .kpi span{display:block;margin-top:6px;font-size:18px}
 
 /* FOTO */
 .preview{
-  width:100%;max-height:220px;
-  object-fit:cover;border-radius:18px;
-  margin-top:12px;
+  width:100%;max-height:220px;object-fit:cover;
+  border-radius:18px;margin-top:12px;
 }
 
 /* TOAST */
@@ -112,8 +101,7 @@ button{
   position:fixed;bottom:20px;right:20px;
   background:#22c55e;color:#fff;
   padding:14px 20px;border-radius:14px;
-  font-weight:800;opacity:0;
-  transform:translateY(10px);
+  font-weight:800;opacity:0;transform:translateY(10px);
   transition:.3s;pointer-events:none;z-index:99;
 }
 .toast.show{opacity:1;transform:translateY(0)}
@@ -124,7 +112,7 @@ button{
 
 <div class="container">
 
-<!-- LOGIN -->
+<!-- AUTH -->
 <div id="authBox" class="card">
   <h1>ENTRAR</h1>
   <label>EMAIL</label>
@@ -191,15 +179,15 @@ button{
 <div id="toast" class="toast">SALVO COM SUCESSO</div>
 
 <script>
-/* SUPABASE */
+/* ================= SUPABASE ================= */
 const sb = supabase.createClient(
   "https://dxkszikemntfusfyrzos.supabase.co",
   "sb_publishable_NNFvdfSXgOdGGVcSbphbjQ_brC3_9ed"
 );
 
-/* UTIL */
-const moeda = v => "R$ " + Number(v||0).toLocaleString("pt-BR",{minimumFractionDigits:2});
-const toast = m => {
+/* ================= UTIL ================= */
+const moeda=v=>"R$ "+Number(v||0).toLocaleString("pt-BR",{minimumFractionDigits:2});
+const toast=m=>{
   const t=document.getElementById("toast");
   t.textContent=m;t.classList.add("show");
   setTimeout(()=>t.classList.remove("show"),2500);
@@ -208,7 +196,16 @@ const overlay=document.getElementById("overlay");
 const show=()=>overlay.style.display="flex";
 const hide=()=>overlay.style.display="none";
 
-/* LOGIN */
+/* ================= AUTH + RESTORE ================= */
+async function restore(){
+  const { data } = await sb.auth.getSession();
+  if(data?.session){
+    authBox.classList.add("hidden");
+    app.classList.remove("hidden");
+  }
+}
+restore();
+
 async function login(){
   show();
   const {error}=await sb.auth.signInWithPassword({
@@ -221,26 +218,23 @@ async function login(){
   app.classList.remove("hidden");
 }
 
-/* FOTO */
+/* ================= FOTO ================= */
 fotoProduto.onchange=()=>{
   if(!fotoProduto.files[0])return;
   previewFoto.src=URL.createObjectURL(fotoProduto.files[0]);
   previewFoto.classList.remove("hidden");
 };
 
-/* INGREDIENTES */
+/* ================= INGREDIENTES ================= */
 let ingrediente=null;
 let ingredientes=[];
 
 buscaIngrediente.oninput=async()=>{
   const q=buscaIngrediente.value.trim().toUpperCase();
   if(q.length<2){listaIngrediente.innerHTML="";return;}
-
   const {data}=await sb.from("produtos")
     .select("id,nome,unidade_medida,valor,rendimento_percentual")
-    .ilike("nome",`%${q}%`)
-    .limit(10);
-
+    .ilike("nome",`%${q}%`).limit(10);
   listaIngrediente.innerHTML=(data||[]).map(i=>`
     <div class="item" onclick="selectIngrediente(${i.id})">${i.nome}</div>
   `).join("");
@@ -250,16 +244,13 @@ async function selectIngrediente(id){
   const {data,error}=await sb.from("produtos")
     .select("nome,unidade_medida,valor,rendimento_percentual")
     .eq("id",id).single();
-
   if(error||!data){toast("ERRO AO CARREGAR INGREDIENTE");return;}
-
   ingrediente={
     nome:data.nome,
     unidade:data.unidade_medida,
     custo:Number(data.valor),
     rendimento:Number(data.rendimento_percentual||100)
   };
-
   unUso.value=ingrediente.unidade;
   custo.value=ingrediente.custo.toFixed(4);
   rend.value=ingrediente.rendimento;
@@ -270,38 +261,28 @@ function addIngrediente(){
   if(!ingrediente||!qtd.value)return;
   const fator=(ingrediente.rendimento||100)/100;
   const total=(qtd.value*ingrediente.custo)/fator;
-  ingredientes.push({
-    ...ingrediente,
-    quantidade:Number(qtd.value),
-    custo_total:total
-  });
-  qtd.value="";
-  ingrediente=null;
-  render();
+  ingredientes.push({...ingrediente,quantidade:Number(qtd.value),custo_total:total});
+  qtd.value="";ingrediente=null;render();
 }
 
 function render(){
   const cmv=ingredientes.reduce((s,i)=>s+i.custo_total,0);
   const por=rendimentoFinal.value||1;
-
   listaIng.innerHTML=ingredientes.map(i=>`
     <div class="ing">
       <span>${i.nome} (${i.quantidade} ${i.unidade})</span>
       <strong>${moeda(i.custo_total)}</strong>
     </div>
   `).join("");
-
   cmvTotal.textContent=moeda(cmv);
   cmvUnit.textContent=moeda(cmv/por);
 }
 
-/* SALVAR */
+/* ================= SALVAR ================= */
 async function salvar(){
   if(!nomePrato.value||!ingredientes.length){
-    toast("PREENCHA PRATO E INGREDIENTES");
-    return;
+    toast("PREENCHA PRATO E INGREDIENTES");return;
   }
-
   show();
 
   let fotoUrl=null;
@@ -324,7 +305,6 @@ async function salvar(){
     rendimento:por,
     foto_url:fotoUrl
   }).select().single();
-
   if(error){hide();toast(error.message);return;}
 
   for(const i of ingredientes){
@@ -339,8 +319,7 @@ async function salvar(){
     });
   }
 
-  hide();
-  toast("SALVO COM SUCESSO");
+  hide();toast("SALVO COM SUCESSO");
   setTimeout(()=>location.reload(),1200);
 }
 </script>
